--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -83,35 +83,35 @@
 
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                 <li>
-                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Home" asp-action="Register">Register</a>
+                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="User" asp-action="Register">Register</a>
                                 </li>
                                 <li>
-                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Home" asp-action="Login">Login</a>
+                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="User" asp-action="Login">Login</a>
                                 </li>
                                 <li>
-                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Home" asp-action="History">History</a>
+                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Order" asp-action="History">History</a>
                                 </li>
                                 <li class="navelement">Admin</li>
                                 <li>
-                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Home" asp-action="Information">Information</a>
+                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="User" asp-action="Information">Information</a>
                                 </li>
                                 <li>
-                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Home" asp-action="ChangePassword">ChangePassword</a>
+                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="User" asp-action="ChangePassword">ChangePassword</a>
                                 </li>
                                 <li>
-                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Home" asp-action="Cart">Cart</a>
+                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Cart" asp-action="Cart">Cart</a>
                                 </li>
                                 <li>
-                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Home" asp-action="ProductDetail">ProductDetail</a>
+                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Product" asp-action="ProductDetail">ProductDetail</a>
                                 </li>
                                 <li>
-                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Home" asp-action="Collection">Collection</a>
+                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="product" asp-action="Collection">Collection</a>
                                 </li>
                                 <li>
-                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Home" asp-action="AdminDashboard">AdminDashboard</a>
+                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Admin" asp-action="AdminDashboard">AdminDashboard</a>
                                 </li>
                                 <li>
-                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="Home" asp-action="EditProfile">EditProfile</a>
+                                    <a class="navelement" style="color:black; text-decoration:none;" asp-controller="User" asp-action="EditProfile">EditProfile</a>
                                 </li>
                             </ul>
                         </div>
