--- a/Project/Client/Views/User/ForgotPassword.cshtml
+++ b/Project/Client/Views/User/ForgotPassword.cshtml
@@ -32,7 +32,7 @@
                 <hr>
             </form>
             <div class="text-center mt-4">
-                <span>Chưa có tài khoản? <a asp-controller="Home" asp-action="Register" class="text-decoration-none">Đăng ký tài khoản mới</a></span>
+                <span>Chưa có tài khoản? <a asp-controller="User" asp-action="Register" class="text-decoration-none">Đăng ký tài khoản mới</a></span>
             </div>
         </div>
     </div>
