--- a/Project/Client/Views/Home/Index.cshtml
+++ b/Project/Client/Views/Home/Index.cshtml
@@ -257,7 +257,7 @@
             </div>
         </div>
     </div>
-    <a asp-controller="Home" asp-action="Product" class="btn dropdown-toggle fw-bold" style="margin-left: 45%;margin-top:80px;border: .3px solid #00A97F" type="button" id="dropdownMenuButton2" aria-expanded="false">
+    <a asp-controller="Product" asp-action="Product" class="btn dropdown-toggle fw-bold" style="margin-left: 45%;margin-top:80px;border: .3px solid #00A97F" type="button" id="dropdownMenuButton2" aria-expanded="false">
         All Product
     </a>
 
