--- a/Project/Client/Views/User/Register.cshtml
+++ b/Project/Client/Views/User/Register.cshtml
@@ -54,7 +54,7 @@
                 </div>
             </form>
             <div class="text-center mt-4">
-                <span>Đã có tài khoản? <a asp-controller="Home" asp-action="Login" class="text-decoration-none">Đăng nhập ngay</a></span>
+                <span>Đã có tài khoản? <a asp-controller="User" asp-action="Login" class="text-decoration-none">Đăng nhập ngay</a></span>
             </div>
         </div>
     </div>
