--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -37,9 +37,9 @@
                                 <i class="fa-solid fa-chevron-down"></i>
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li class="navelement">Action</li>
-                                <li class="navelement">Another Action</li>
-                                <li class="navelement">Something else here</li>
+                                <li class="navelement">Windown</li>
+                                <li class="navelement">MacOS</li>
+                                <li class="navelement">Android</li>
                             </ul>
                         </div>
                         <div class="dropdown mx-2">
