--- a/Project/Client/Views/Admin/UsersManager.cshtml
+++ b/Project/Client/Views/Admin/UsersManager.cshtml
@@ -121,6 +121,9 @@
 						</tbody>
 					</table>
 				</div>
+				<div>
+					<a class="btn btn-warning" data-toggle="modal" data-target="#modalUser">ok</a>
+				</div>
 			</div>
 
 			<div class="mt-5">
@@ -155,10 +158,11 @@
 				</table>
 			</div>
 		</div>
+	</div>
 
-<<<<<<< Updated upstream
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-=======
+	<<<<<<< Updated upstream
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	=======
 	@* Modal *@
 	<div class="modal fade" id="modalUser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-xl">
@@ -245,6 +249,6 @@
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
->>>>>>> Stashed changes
+	>>>>>>> Stashed changes
 </body>
 </html>
