--- a/Project/Client/Views/Admin/UsersManager.cshtml
+++ b/Project/Client/Views/Admin/UsersManager.cshtml
@@ -1,4 +1,99 @@
-﻿<!DOCTYPE html>
+﻿@{
+	Layout = "_LayoutAdmin";
+}
+
+<div>
+	<h1>User Manager</h1>
+
+	<div class="container mt-4">
+		<!-- Thanh tìm kiếm và nút Thêm -->
+		<div class="d-flex justify-content-between mb-3">
+			<div class="col-md-4">
+				<input class="form-control" type="text" placeholder="Tìm kiếm theo Địa chỉ công trình..." />
+			</div>
+			<div>
+				<button class="btn btn-success">+ Thêm</button>
+			</div>
+		</div>
+
+		<!-- Bảng thông tin -->
+		<table class="table table-bordered table-hover align-middle">
+			<thead class="table-light">
+				<tr>
+					<th scope="col"><input type="checkbox" /></th>
+					<th scope="col">Avatar</th>
+					<th scope="col">User Name</th>
+					<th scope="col">Display Name</th>
+					<th scope="col">Email</th>
+					<th scope="col">Phone Number</th>
+					<th scope="col">Status</th>
+					<th scope="col">CreateAt</th>
+					@* <th scope="col">UpdateAt</th> *@
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><input type="checkbox" /></td>
+					<td><img src="~/Image/avatar.jpeg" alt="Alternate Text" style="width: 80px; height: 80px" /></td>
+					<td>tuanlx123</td>
+					<td>Tuan Dep Trai</td>
+					<td>tuanpham147369@gmail.com</td>
+					<td><span class="text-success">0933 808 235</span></td>
+					<td>Đã kích hoạt</td>
+					<td>10/05/2024</td>
+					@* <td>-</td> *@
+				</tr>
+				<tr>
+					<td><input type="checkbox" /></td>
+					<td>-</td>
+					<td>-</td>
+					<td>Quá ok tụi anh q...</td>
+					<td>-</td>
+					<td><span class="text-success">024 3747 4700</span></td>
+					<td>-</td>
+					<td>-</td>
+					@* <td>-</td> *@
+				</tr>
+				<!-- Thêm các dòng dữ liệu tương tự -->
+			</tbody>
+		</table>
+
+		<!-- Phân trang -->
+		<div class="d-flex justify-content-between mt-3">
+			<div>Tổng số: 3,145</div>
+			<div>
+				<select class="form-select form-select-sm w-auto d-inline-block">
+					<option>20 Bản ghi trên trang</option>
+					<option>50 Bản ghi trên trang</option>
+					<option>100 Bản ghi trên trang</option>
+				</select>
+				<nav aria-label="Page navigation example" class="d-inline-block">
+					<ul class="pagination pagination-sm mb-0">
+						<li class="page-item disabled">
+							<a class="page-link" href="#">1 đến 20</a>
+						</li>
+						<li class="page-item"><a class="page-link" href="#">1</a></li>
+						<li class="page-item"><a class="page-link" href="#">2</a></li>
+						<li class="page-item"><a class="page-link" href="#">3</a></li>
+						<li class="page-item"><a class="page-link" href="#">></a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+@* <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -59,7 +154,7 @@
 					</a>
 				</div>
 				<div class="d-flex align-items-center mb-3">
-					<img src="~/image/history-game-1.jpg" class="rounded me-3" alt="Avatar" style="width:70px; height70px;" />
+					<img src="~/image/avatar.jpeg" class="rounded me-3" alt="Avatar" style="width:70px; height70px;" />
 					<div>
 						<h5 class="mb-0">tuandeptrai1011</h5>
 						<p class="mb-0 text-muted">tuandeptrai@gmail.com<br>10/11/2004</p>
@@ -94,7 +189,7 @@
 								<th class="align-content-center border">Avatar</th>
 								<td class="align-content-center text-center">
 									<div class="w-100">
-										<img src="~/image/history-game-1.jpg" class="rounded me-3" alt="Avatar" style="width:70px; height70px;" />
+										<img src="~/image/avatar.jpeg" class="rounded me-3" alt="Avatar" style="width:70px; height70px;" />
 									</div>
 								</td>
 							</tr>
@@ -107,16 +202,20 @@
 								<td class="align-content-center text-center">tuandeptrai</td>
 							</tr>
 							<tr>
-								<th class="align-content-center border">Display Name</th>
+								<th class="align-content-center border">Email</th>
+								<td class="align-content-center text-center">tuandeptrai@gmail.com</td>
+							</tr>
+							<tr>
+								<th class="align-content-center border">Phone Number</th>
+								<td class="align-content-center text-center">0379959385</td>
+							</tr>
+							<tr>
+								<th class="align-content-center border">Status</th>
 								<td class="align-content-center text-center">tuandeptrai</td>
 							</tr>
 							<tr>
-								<th class="align-content-center border">Display Name</th>
-								<td class="align-content-center text-center">tuandeptrai</td>
-							</tr>
-							<tr>
-								<th class="align-content-center border">Display Name</th>
-								<td class="align-content-center text-center">tuandeptrai</td>
+								<th class="align-content-center border">CreateAt</th>
+								<td class="align-content-center text-center">20/10/2023</td>
 							</tr>
 						</tbody>
 					</table>
@@ -131,9 +230,14 @@
 					<thead>
 						<tr>
 							<th scope="col">#</th>
-							<th scope="col">First</th>
-							<th scope="col">Last</th>
-							<th scope="col">Handle</th>
+							<th scope="col">Avatar</th>
+							<th scope="col">User Name</th>
+							<th scope="col">Display Name</th>
+							<th scope="col">Email</th>
+							<th scope="col">Phone Number</th>
+							<th scope="col">Status</th>
+							<th scope="col">CreateAt</th>
+							<th scope="col">UpdateAt</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -142,29 +246,41 @@
 							<td>Mark</td>
 							<td>Otto</td>
 							<td>momo</td>
+							<td>momo</td>
+							<td>momo</td>
+							<td>momo</td>
+							<td>momo</td>
+							<td>momo</td>
 						</tr>
 						<tr>
 							<th scope="row">2</th>
 							<td>Jacob</td>
 							<td>Thornton</td>
 							<td>fat</td>
+							<td>fat</td>
+							<td>fat</td>
+							<td>fat</td>
+							<td>fat</td>
+							<td>fat</td>
 						</tr>
 						<tr>
 							<th scope="row">3</th>
 							<td colspan="2">Larry the Bird</td>
+							<td>twitter</td>
+							<td>twitter</td>
+							<td>twitter</td>
+							<td>twitter</td>
+							<td>twitter</td>
 							<td>twitter</td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
 		</div>
-	</div>
+	</div> *@
 
-	<<<<<<< Updated upstream
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-	=======
 	@* Modal *@
-	<div class="modal fade" id="modalUser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+@* 	<div class="modal fade" id="modalUser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-xl">
 			<div class="modal-content">
 				<div class="container-fluid p-5">
@@ -191,7 +307,7 @@
 							<div class="col">
 								<div class="text-center">
 									<div>
-										<img src="~/image/avatarGame.jpeg" alt="Alternate Text" style="width:200px; height200px;" />
+										<img src="~/image/avatar.jpeg" alt="Alternate Text" style="width:200px; height200px;" />
 									</div>
 									<a class="btn btn-outline-dark text-center mt-2">Change Avatar</a>
 								</div>
@@ -207,9 +323,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> *@
 
-	<div class="container-fluid p-5">
+@* 	<div class="container-fluid p-5">
 		<form class="row" asp-action="Create">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<div class="row">
@@ -249,6 +365,6 @@
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-	>>>>>>> Stashed changes
-</body>
-</html>
+	>>>>>>> Stashed changes *@
+@* </body>
+</html> *@
