--- a/Project/Client/Views/Admin/AdminDashboard.cshtml
+++ b/Project/Client/Views/Admin/AdminDashboard.cshtml
@@ -11,12 +11,12 @@
 		</div>
 		<div class="col-md-3 mb-4">
 			<div class="product-item" style="background-image: url('/Image/usermanager.jpeg'); background-size: cover; background-position: center;">
-                <a href="#" style="z-index:2;"><h3 class="text-center">Products Manager</h3></a>
+                <a asp-controller="Admin" asp-action="ProductsManager" style="z-index:2;" class="text-white text-decoration-none"><h3 class="text-center">Products Manager</h3></a>
 			</div>
 		</div>
 		<div class="col-md-3 mb-4">
 			<div class="product-item" style="background-image: url('/Image/ordermanager.jpeg'); background-size: cover; background-position: center;">
-                <a href="#" style="z-index:2;"><h3 class="text-center">Orders Manager</h3></a>
+                <a asp-controller="Admin" asp-action="OrdersManager" style="z-index:2;" class="text-white text-decoration-none"><h3 class="text-center">Orders Manager</h3></a>
 			</div>
 		</div>
 		<div class="col-md-3 mb-4">
