--- a/Project/Client/Views/Admin/OrdersManager.cshtml
+++ b/Project/Client/Views/Admin/OrdersManager.cshtml
@@ -3,34 +3,7 @@
 }
 
 <div>
-	<h1>Products Manager</h1>
-
-	<!-- Nút mở sidebar -->
-	<button class="btn btn-primary mt-4" onclick="openSidebar()">Mở Bộ Lọc</button>
-
-	<!-- Sidebar cho bộ lọc -->
-	<div id="filterSidebar">
-		<a href="javascript:void(0)" class="closebtn" onclick="closeSidebar()">&times;</a>
-		<h5 class="text-center mt-3">Lọc Khách Hàng Theo</h5>
-		<ul>
-			<li><input type="checkbox" id="the"> <label for="the">Thẻ</label></li>
-			<li><input type="checkbox" id="maKH"> <label for="maKH">Mã khách hàng</label></li>
-			<li><input type="checkbox" id="tenKH"> <label for="tenKH">Tên khách hàng</label></li>
-			<li><input type="checkbox" id="maST"> <label for="maST">Mã số thuế</label></li>
-			<li><input type="checkbox" id="tenVT"> <label for="tenVT">Tên viết tắt</label></li>
-			<li><input type="checkbox" id="loaiKH"> <label for="loaiKH">Loại khách hàng</label></li>
-			<li><input type="checkbox" id="dienThoai"> <label for="dienThoai">Điện thoại</label></li>
-			<li><input type="checkbox" id="email"> <label for="email">Email</label></li>
-			<li><input type="checkbox" id="diaChiGD"> <label for="diaChiGD">Địa chỉ (Giao hàng)</label></li>
-			<li><input type="checkbox" id="diaChiHD"> <label for="diaChiHD">Địa chỉ (Hóa đơn)</label></li>
-			<li><input type="checkbox" id="moTa"> <label for="moTa">Mô tả</label></li>
-			<li><input type="checkbox" id="doanhSo"> <label for="doanhSo">Doanh số đơn hàng</label></li>
-			<li><input type="checkbox" id="congNo"> <label for="congNo">Công nợ</label></li>
-			<li><input type="checkbox" id="hanMuc"> <label for="hanMuc">Hạn mức nợ</label></li>
-			<li><input type="checkbox" id="doanhThu"> <label for="doanhThu">Doanh thu</label></li>
-			<li><input type="checkbox" id="chuSoHuu"> <label for="chuSoHuu">Chủ sở hữu</label></li>
-		</ul>
-	</div>
+	<h1>Orders Manager</h1>
 
 	<div class="container mt-4">
 		<!-- Thanh tìm kiếm và nút Thêm -->
@@ -39,7 +12,7 @@
 				<input class="form-control" type="text" placeholder="Tìm kiếm theo..." />
 			</div>
 			<div>
-				<button class="btn btn-success" data-toggle="modal" data-target="#modalProduct">+ Thêm</button>
+				<button class="btn btn-success" data-toggle="modal" data-target="#modalOrder">+ Thêm</button>
 			</div>
 		</div>
 
@@ -111,17 +84,8 @@
 
 </div>
 
-<script>
-	// Mở sidebar
-	function openSidebar() {
-		document.getElementById("filterSidebar").classList.add("open");
-	}
 
-	// Đóng sidebar
-	function closeSidebar() {
-		document.getElementById("filterSidebar").classList.remove("open");
-	}
-</script>
+
 
 
 
@@ -133,7 +97,7 @@
 
 
 @* Modal *@
-<div class="modal fade" id="modalProduct" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="modalOrder" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-xl">
 		<div class="modal-content">
 			<div class="container-fluid p-5">
