--- a/Project/Client/Views/Shared/_LayoutAdmin.cshtml
+++ b/Project/Client/Views/Shared/_LayoutAdmin.cshtml
@@ -41,6 +41,14 @@
                         </button>
                     </form>
                 </li>
+
+                <li class="nav-item m-2">
+                    <form action="OrdersManager" method="get">
+                        <button id="orders-manager-btn" class="nav-link text-start border-0 w-100">
+                            <span class="p-2 fs-6 fw-bold">Orders Manager</span>
+                        </button>
+                    </form>
+                </li>
             </ul>
 
             <hr>
@@ -120,6 +128,8 @@
             document.getElementById("users-manager-btn").classList.add("active");
         } else if (currentPath.includes("ProductsManager")) {
             document.getElementById("products-manager-btn").classList.add("active");
+        } else if (currentPath.includes("OrdersManager")) {
+            document.getElementById("orders-manager-btn").classList.add("active");
         }
     </script>
 
