--- a/Project/Client/Views/Admin/AdminDashboard.cshtml
+++ b/Project/Client/Views/Admin/AdminDashboard.cshtml
@@ -5,24 +5,41 @@
 <div class="w-100">
 	<div class="row">
         <div class="col-md-3 mb-4 m-auto">
-			<div class="product-item" style="background-image: url('/Image/productmanager.jpeg'); background-size: cover; background-position: center;">
-                <a asp-controller="Admin" asp-action="UsersManager" style="z-index:2;" class="text-white text-decoration-none"><h3 class="text-center">Users Manager</h3></a>
-			</div>
+            <a asp-controller="Admin" asp-action="UsersManager" class="text-white text-decoration-none">
+                <div class="product-item" style="background-image: url('/Image/usermanager.jpeg'); background-size: cover; background-position: center;">
+                    <span style="z-index:2;"><h3 class="text-center">Users Manager</h3></span>
+                </div>
+            </a>
 		</div>
         <div class="col-md-3 mb-4 m-auto">
-			<div class="product-item" style="background-image: url('/Image/usermanager.jpeg'); background-size: cover; background-position: center;">
+@* 			<div class="product-item" style="background-image: url('/Image/usermanager.jpeg'); background-size: cover; background-position: center;">
                 <a asp-controller="Admin" asp-action="ProductsManager" style="z-index:2;" class="text-white text-decoration-none"><h3 class="text-center">Products Manager</h3></a>
-			</div>
+			</div> *@
+            <a asp-controller="Admin" asp-action="ProductsManager" class="text-white text-decoration-none">
+                <div class="product-item" style="background-image: url('/Image/productmanager.jpeg'); background-size: cover; background-position: center;">
+                    <span style="z-index:2;"><h3 class="text-center">Products Manager</h3></span>
+                </div>
+            </a>
 		</div>
         <div class="col-md-3 mb-4 m-auto">
-			<div class="product-item" style="background-image: url('/Image/ordermanager.jpeg'); background-size: cover; background-position: center;">
+@* 			<div class="product-item" style="background-image: url('/Image/ordermanager.jpeg'); background-size: cover; background-position: center;">
                 <a asp-controller="Admin" asp-action="OrdersManager" style="z-index:2;" class="text-white text-decoration-none"><h3 class="text-center">Orders Manager</h3></a>
-			</div>
+			</div> *@
+            <a asp-controller="Admin" asp-action="OrdersManager" class="text-white text-decoration-none">
+                <div class="product-item" style="background-image: url('/Image/ordermanager.jpeg'); background-size: cover; background-position: center;">
+                    <span style="z-index:2;"><h3 class="text-center">Orders Manager</h3></span>
+                </div>
+            </a>
 		</div>
         <div class="col-md-3 mb-4 m-auto">
-			<div class="product-item" style="background-image: url('/Image/avatar.jpeg'); background-size: cover; background-position: center;">
+@* 			<div class="product-item" style="background-image: url('/Image/avatar.jpeg'); background-size: cover; background-position: center;">
                 <a href="#" style="z-index:2;"><h3 class="text-center">Product 1</h3></a>
-			</div>
+			</div> *@
+            <a asp-controller="Admin" asp-action="UsersManager" class="text-white text-decoration-none">
+                <div class="product-item" style="background-image: url('/Image/avatar.jpeg'); background-size: cover; background-position: center;">
+                    <span style="z-index:2;"><h3 class="text-center">Product 1</h3></span>
+                </div>
+            </a>
 		</div>
 	</div>
 </div>
@@ -153,3 +170,4 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html> *@
+
