--- a/Project/Client/Views/Admin/AdminDashboard.cshtml
+++ b/Project/Client/Views/Admin/AdminDashboard.cshtml
@@ -35,9 +35,9 @@
 @* 			<div class="product-item" style="background-image: url('/Image/avatar.jpeg'); background-size: cover; background-position: center;">
                 <a href="#" style="z-index:2;"><h3 class="text-center">Product 1</h3></a>
 			</div> *@
-            <a asp-controller="Admin" asp-action="UsersManager" class="text-white text-decoration-none">
+            <a asp-controller="Admin" asp-action="CategoriesManager" class="text-white text-decoration-none">
                 <div class="product-item" style="background-image: url('/Image/avatar.jpeg'); background-size: cover; background-position: center;">
-                    <span style="z-index:2;"><h3 class="text-center">Product 1</h3></span>
+                    <span style="z-index:2;"><h3 class="text-center">Categories Manager</h3></span>
                 </div>
             </a>
 		</div>
