--- a/Project/Client/Views/Shared/_LayoutAdmin.cshtml
+++ b/Project/Client/Views/Shared/_LayoutAdmin.cshtml
@@ -61,7 +61,7 @@
 
 			<hr>
 			<div class="mt-auto">
-				<div class="text-start"><span class="p-2 fs-5 fw-bold">Log out</span></div>
+				<a class="text-start btn btn-danger" href=""><span class="p-2 fs-5 fw-bold">Log out</span></a>
 			</div>
 		</div>
 		<div class="content" style="min-height:500px; width: 100%">
