--- a/Project/Client/Views/Admin/AdminDashboard.cshtml
+++ b/Project/Client/Views/Admin/AdminDashboard.cshtml
@@ -7,28 +7,28 @@
         <div class="col-md-3 mb-4 m-auto">
             <a asp-controller="Admin" asp-action="UsersManager" class="text-white text-decoration-none">
                 <div class="product-item" style="background-image: url('/Image/usermanager.jpeg'); background-size: cover; background-position: center;">
-                    <span style="z-index:2;"><h3 class="text-center">Users Manager</h3></span>
+                    <div style="z-index:2;"><h3 class="text-center">Users Manager</h3></div>
                 </div>
             </a>
 		</div>
         <div class="col-md-3 mb-4 m-auto">
             <a asp-controller="Admin" asp-action="ProductsManager" class="text-white text-decoration-none">
                 <div class="product-item" style="background-image: url('/Image/productmanager.jpeg'); background-size: cover; background-position: center;">
-                    <span style="z-index:2;"><h3 class="text-center">Products Manager</h3></span>
+                    <div style="z-index:2;"><h3 class="text-center">Products Manager</h3></div>
                 </div>
             </a>
 		</div>
         <div class="col-md-3 mb-4 m-auto">
             <a asp-controller="Admin" asp-action="OrdersManager" class="text-white text-decoration-none">
                 <div class="product-item" style="background-image: url('/Image/ordermanager.jpeg'); background-size: cover; background-position: center;">
-                    <span style="z-index:2;"><h3 class="text-center">Orders Manager</h3></span>
+                    <div style="z-index:2;"><h3 class="text-center">Orders Manager</h3></div>
                 </div>
             </a>
 		</div>
         <div class="col-md-3 mb-4 m-auto">
             <a asp-controller="Admin" asp-action="CategoriesManager" class="text-white text-decoration-none">
                 <div class="product-item" style="background-image: url('/Image/avatar.jpeg'); background-size: cover; background-position: center;">
-                    <span style="z-index:2;"><h3 class="text-center">Categories Manager</h3></span>
+                    <div style="z-index:2;"><h3 class="text-center">Categories Manager</h3></div>
                 </div>
             </a>
 		</div>
