--- a/Project/Client/Views/Shared/_LayoutAdmin.cshtml
+++ b/Project/Client/Views/Shared/_LayoutAdmin.cshtml
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
 </head>
 <body style="background-color: #E0F2F1;">
 	<div class="d-flex">
@@ -54,6 +56,14 @@
 					<form action="CategoriesManager" method="get">
 						<button id="categories-manager-btn" class="nav-link text-start border-0 w-100">
 							<span class="p-2 fs-6 fw-bold">Categories Manager</span>
+						</button>
+					</form>
+				</li>
+
+				<li class="nav-item m-2">
+					<form action="CensorshipManager" method="get">
+						<button id="censorship-manager-btn" class="nav-link text-start border-0 w-100">
+							<span class="p-2 fs-6 fw-bold">Censorship Manager</span>
 						</button>
 					</form>
 				</li>
@@ -149,8 +159,10 @@
 			$('#orders-manager-btn').addClass('active');
 		} else if (currentPath.includes("CategoriesManager")) {
 			$('#categories-manager-btn').addClass('active');
+		} else if (currentPath.includes("CensorshipManager")) {
+			$('#censorship-manager-btn').addClass('active');
 		}
-
+		
 		// Khi DOM đã sẵn sàng
 		$(document).ready(function () {
 			// Lắng nghe sự thay đổi của checkbox tổng (select all)
